Added a reishi ingot

--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -6,5 +6,9 @@
   "itemGroup.soulsawakeningModTabMisc": "Souls awakening misc",
 
   "block.soulsawakening.reishi_ore": "Reishi ore",
-  "item.soulsawakening.reishi_essence": "Reishi essence"
+
+
+
+  "item.soulsawakening.reishi_essence": "Reishi essence",
+  "item.soulsawakening.reishi_ingot": "Reishi ingot"
 }
