setup for the skill tree

--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -11,5 +11,7 @@
   "item.soulsawakening.reishi_essence": "Reishi essence",
   "item.soulsawakening.reishi_ingot": "Reishi ingot",
 
-  "item.soulsawakening.zanpakuto": "Zanpakuto"
+  "item.soulsawakening.zanpakuto": "Zanpakuto",
+
+  "gui.soulsawakening.tree": "Skill tree"
 }
