setup for the skill tree will start working on the skill system

--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -13,5 +13,9 @@
 
   "item.soulsawakening.zanpakuto": "Zanpakuto",
 
-  "gui.soulsawakening.tree": "Skill tree"
+  "gui.soulsawakening.tree": "Skill tree",
+  "gui.soulsawakening.hollow_tree": "Hollow",
+  "gui.soulsawakening.shinigami_tree": "Shinigami",
+  "gui.soulsawakening.quincy_tree": "Quincy"
+
 }
