fixed the knockback issue of zanpakuto

--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -6,9 +6,7 @@
   "itemGroup.soulsawakeningModTabMisc": "Souls awakening misc",
   "itemGroup.soulsawakeningModTabWeapons": "Souls awakening weapons",
 
-  "block.soulsawakening.reishi": "Reishi",
-
-  "item.soulsawakening.reishi_essence": "Reishi essence",
+  "item.soulsawakening.reishi": "Reishi",
   "item.soulsawakening.reishi_ingot": "Reishi ingot",
 
   "item.soulsawakening.zanpakuto": "Zanpakuto",
