--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -16,6 +16,7 @@
   "gui.soulsawakening.shinigami_tree": "Shinigami",
   "gui.soulsawakening.quincy_tree": "Quincy",
 
-  "block.soulsawakening.reishi_ore": "Reishi Ore"
+  "block.soulsawakening.reishi_ore": "Reishi Ore",
+  "block.soulsawakening.hollow_sand": "Hollow Sand"
 
 }
