Working on the centipede hollow Should normally be working (minus animations)

--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -17,6 +17,8 @@
   "gui.soulsawakening.quincy_tree": "Quincy",
 
   "block.soulsawakening.reishi_ore": "Reishi Ore",
-  "block.soulsawakening.hollow_sand": "Hollow Sand"
+  "block.soulsawakening.hollow_sand": "Hollow Sand",
+
+  "entity.soulsawakening.centipede": "Hollow Centipede"
 
 }
