added advancements for every race

--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -43,6 +43,15 @@
   "advancements.soulsawakening.race.fullbringer.description": "Skipping a few steps",
 
   "advancements.soulsawakening.race.hollow.title": "Hollow",
-  "advancements.soulsawakening.race.hollow.description": "Insatiable hunger... forever"
+  "advancements.soulsawakening.race.hollow.description": "Insatiable hunger... forever",
+
+  "advancements.soulsawakening.race.gillian.title": "Gillian",
+  "advancements.soulsawakening.race.gillian.description": "Giant laser... pretty cool",
+
+  "advancements.soulsawakening.race.adjucha.title": "Adjucha",
+  "advancements.soulsawakening.race.adjucha.description": "Discovering a new world",
+
+  "advancements.soulsawakening.race.vasto_lorde.title": "Vasto Lorde",
+  "advancements.soulsawakening.race.vasto_lorde.description": "Is this the peak?"
 
 }
