added wakizashi item completely (maybe add range as attribute later)

--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -10,6 +10,7 @@
   "item.soulsawakening.reishi_ingot": "Reishi ingot",
 
   "item.soulsawakening.zanpakuto": "Zanpakuto",
+  "item.soulsawakening.zanpakuto_wakizashi": "Zanpakuto: Wakizashi",
 
   "gui.soulsawakening.tree": "Skill tree",
   "gui.soulsawakening.hollow_tree": "Hollow",
