tweaked the wakizashi a bit so it has lesser range

--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -53,6 +53,8 @@
   "advancements.soulsawakening.race.adjucha.description": "Discovering a new world",
 
   "advancements.soulsawakening.race.vasto_lorde.title": "Vasto Lorde",
-  "advancements.soulsawakening.race.vasto_lorde.description": "Is this the peak?"
+  "advancements.soulsawakening.race.vasto_lorde.description": "Is this the peak?",
+
+  "soulsawakening.attack_range": "Attack range"
 
 }
