Did a lot of cleaning and bugfixing Also shinai is completely added now

--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -11,6 +11,7 @@
 
   "item.soulsawakening.zanpakuto": "Zanpakuto",
   "item.soulsawakening.zanpakuto_wakizashi": "Zanpakuto: Wakizashi",
+  "item.soulsawakening.shinai": "Shinai",
 
   "gui.soulsawakening.tree": "Skill tree",
   "gui.soulsawakening.hollow_tree": "Hollow",
