Added way more challenges that are just stronger compared to each other

--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -66,6 +66,24 @@
   "challenge.soulsawakening.begin.shinigami": "Basic shinigami",
   "challenge.soulsawakening.begin.objective.shinigami": "Defeat a basic shinigami",
   "challenge.soulsawakening.begin.seated20shinigami": "Seated 20th shinigami",
-  "challenge.soulsawakening.begin.objective.seated20shinigami": "Seated 20th shinigami"
+  "challenge.soulsawakening.begin.objective.seated20shinigami": "Seated 20th shinigami",
+  "challenge.soulsawakening.begin.seated19shinigami": "Seated 19th shinigami",
+  "challenge.soulsawakening.begin.objective.seated19shinigami": "Seated 19th shinigami",
+  "challenge.soulsawakening.begin.seated18shinigami": "Seated 18th shinigami",
+  "challenge.soulsawakening.begin.objective.seated18shinigami": "Seated 18th shinigami",
+  "challenge.soulsawakening.begin.seated17shinigami": "Seated 17th shinigami",
+  "challenge.soulsawakening.begin.objective.seated17shinigami": "Seated 17th shinigami",
+  "challenge.soulsawakening.begin.seated16shinigami": "Seated 16th shinigami",
+  "challenge.soulsawakening.begin.objective.seated16shinigami": "Seated 16th shinigami",
+  "challenge.soulsawakening.begin.seated15shinigami": "Seated 15th shinigami",
+  "challenge.soulsawakening.begin.objective.seated15shinigami": "Seated 15th shinigami",
+  "challenge.soulsawakening.begin.seated14shinigami": "Seated 14th shinigami",
+  "challenge.soulsawakening.begin.objective.seated14shinigami": "Seated 14th shinigami",
+  "challenge.soulsawakening.begin.seated13shinigami": "Seated 13th shinigami",
+  "challenge.soulsawakening.begin.objective.seated13shinigami": "Seated 13th shinigami",
+  "challenge.soulsawakening.begin.seated12shinigami": "Seated 12th shinigami",
+  "challenge.soulsawakening.begin.objective.seated12shinigami": "Seated 12th shinigami",
+  "challenge.soulsawakening.begin.seated11shinigami": "Seated 11th shinigami",
+  "challenge.soulsawakening.begin.objective.seated11shinigami": "Seated 11th shinigami"
 
 }
