cut out a lot for the stats of shinigami, added the stats to hollow

--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -86,6 +86,17 @@
   "challenge.soulsawakening.begin.seated11shinigami": "Seated 11th shinigami",
   "challenge.soulsawakening.begin.objective.seated11shinigami": "Seated 11th shinigami",
   "ability.message.no_target": "No target found",
-  "ability.message.reiatsu_target": "The target has too much reiatsu presssure to be affected!"
+  "ability.message.reiatsu_target": "The target has too much reiatsu presssure to be affected!",
 
+  "gui.reiatsu.button": "Makes reiatsu-based abilities and kido stronger, also makes you more resistant against those.",
+  "gui.hoho.button": "Increases your attack speed, speed and improves hoho-based abilities.",
+  "gui.haku.button": "Increases your damage with bare fists and improves hakuda-based abilities.",
+  "gui.zanju.button": "Increased damage with any sword and improves zanjutsu-based abilities.",
+
+  "gui.evolution.button": "Evolve",
+
+  "gui.evolution.tooltip": "Consume all your hollow points to evolve, resetting the extra damage on certain abilities",
+  "gui.evolution.active": "You need 50 hollow points to evolve.",
+  "gui.mutation_point.tooltip": "You gain mutation points by killing other hollows. Those mutation points you can spend somewhere.",
+  "gui.evolution_point.tooltip": "You gain evolution points by killing pluses and shinigami."
 }
