--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -89,13 +89,17 @@
   "ability.message.reiatsu_target": "The target has too much reiatsu presssure to be affected!",
 
   "gui.reiatsu.button": "Makes reiatsu-based abilities, also makes you more resistant against those.",
+  "gui.reiatsu_quincy.button": "Makes your spirit weapon stronger and get more resilience against reiatsu based attacks.",
   "gui.hoho.button": "Increases your attack speed, speed and improves hoho-based abilities.",
+  "gui.hirenkyaku.button": "Increases your speed based abilities and recharge of spirit weapon.",
   "gui.haku.button": "Increases your damage with bare fists and improves hakuda-based abilities.",
   "gui.zanju.button": "Increased damage with any sword and improves zanjutsu-based abilities.",
   "gui.constitution.button": "Increases max health and health regeneration",
   "gui.hierro.button": "Increases resistance against all incoming damage",
   "gui.agility.button": "Increases agility-based abilities",
   "gui.evolution.button": "Evolve",
+  "gui.blut.button": "Increases your blut-based abilities",
+
 
   "gui.evolution.tooltip": "Consume all your hollow points to evolve, resetting the extra damage on certain abilities",
   "gui.evolution.active": "You need 50 hollow points to evolve.",
