making of a choice screen for your spirit weapon, you can 'stock' items in your dangle now so you can switch

--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -14,6 +14,10 @@
   "item.soulsawakening.shinai": "Shinai",
   "item.soulsawakening.dangle": "Dangle",
   "item.soulsawakening.kojaku": "Kojaku",
+  "item.soulsawakening.fishing_rod_reishi": "Reishi Fishing Rod",
+  "item.soulsawakening.spear_reishi": "Reishi Spear",
+  "item.soulsawakening.trident_reishi": "Reishi Trident",
+  "item.soulsawakening.sword_reishi": "Reishi Sword",
 
   "gui.soulsawakening.tree": "Skill tree",
   "gui.soulsawakening.hollow_tree": "Hollow",
