added a tag for spirit weapon and made logic with that, added advancement

--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -71,6 +71,8 @@
 
   "advancements.soulsawakening.race.quincy.title": "Quincy",
   "advancements.soulsawakening.race.quincy.description": "Balance? I want them all dead.",
+  "advancements.soulsawakening.race.spirit_weapon.title": "Spirit Weapon",
+  "advancements.soulsawakening.race.spirit_weapon.description": "New tools are imperative for domination",
   "soulsawakening.attack_range": "Attack range",
 
   "challenge.message.start_title": "Starting Challenge",
