--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -14,6 +14,7 @@
   "item.soulsawakening.shinai": "Shinai",
   "item.soulsawakening.dangle": "Dangle",
   "item.soulsawakening.kojaku": "Kojaku",
+  "item.soulsawakening.ginrei_kojaku_bow": "Ginrei Kojaku",
   "item.soulsawakening.fishing_rod_reishi": "Reishi Fishing Rod",
   "item.soulsawakening.spear_reishi": "Reishi Spear",
   "item.soulsawakening.trident_reishi": "Reishi Trident",
