issue fixing error

--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -97,7 +97,7 @@
   "advancements.soulsawakening.dimensions.hueco_mundo.description": "An endless dead desert...",
 
   "advancements.soulsawakening.dimensions.soul_society_shadow.title": "Soul society shadow",
-  "advancements.soulsawakening.dimensions.souls_society_shadow.description": "Welcome to the shadow of soul society",
+  "advancements.soulsawakening.dimensions.soul_society_shadow.description": "Welcome to the shadow of soul society",
 
   "challenge.message.start_title": "Starting Challenge",
   "challenge.message.start_subtitle": "Please wait",
