added shinigami clothing fully working in the mod

--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -30,6 +30,10 @@
   "item.soulsawakening.trident_reishi": "Reishi Trident",
   "item.soulsawakening.sword_reishi": "Reishi Sword",
 
+  "item.soulsawakening.shinigami_chest": "Shinigami chest",
+  "item.soulsawakening.shinigami_pants": "Shinigami pants",
+  "item.soulsawakening.shinigami_sandals": "Shinigami sandals",
+
   "gui.soulsawakening.tree": "Skill tree",
   "gui.soulsawakening.hollow_tree": "Hollow",
   "gui.soulsawakening.shinigami_tree": "Shinigami",
