added all the item icon textures for armor;added more armor; still need models

--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -34,6 +34,11 @@
   "item.soulsawakening.shinigami_pants": "Shinigami pants",
   "item.soulsawakening.shinigami_sandals": "Shinigami sandals",
 
+  "item.soulsawakening.rogue_cape": "Rogue cape",
+  "item.soulsawakening.rogue_chest": "Rogue chest",
+
+  "item.soulsawakening.captain_cape": "Captain cape",
+
   "gui.soulsawakening.tree": "Skill tree",
   "gui.soulsawakening.hollow_tree": "Hollow",
   "gui.soulsawakening.shinigami_tree": "Shinigami",
