--- a/src/main/resources/assets/soulsawakening/lang/en_us.json
+++ b/src/main/resources/assets/soulsawakening/lang/en_us.json
@@ -155,13 +155,13 @@
 
   "gui.reiatsu.button": "Makes reiatsu-based abilities, also makes you more resistant against those.",
   "gui.reiatsu_quincy.button": "Makes your spirit weapon stronger and get more resilience against reiatsu based attacks.",
-  "gui.hoho.button": "Increases your attack speed, speed and improves hoho-based abilities.",
+  "gui.hoho.button": "Increases your attack speed, crit chance and improves hoho-based abilities.",
   "gui.hirenkyaku.button": "Increases your speed based abilities and recharge of spirit weapon.",
   "gui.haku.button": "Increases your damage with bare fists and improves hakuda-based abilities.",
   "gui.zanju.button": "Increased damage with any sword and improves zanjutsu-based abilities.",
   "gui.constitution.button": "Increases max health and health regeneration",
   "gui.hierro.button": "Increases resistance against all incoming damage",
-  "gui.agility.button": "Increases agility-based abilities",
+  "gui.agility.button": "Increases agility-based abilities and crit chance",
   "gui.evolution.button": "Evolve",
   "gui.blut.button": "Increases your blut-based abilities",
 
@@ -174,7 +174,7 @@
   "gui.constitution_point.tooltip": "This stat has an effect on the max health of the player",
   "gui.blut_points.tooltip": "The manipulation of flow of reishi throughout the blood vessels of a quincy. This stat has an effect on your attack damage and resistance attribute. But also the abilities you acquire",
   "gui.reiatsu_point.tooltip": "The manipulation and control of ambient reishi for quincies is related to this stat, increasing it will mean more resistance against reishi based attacks and better stats for your spirit weapon created by ambient reishi. You can increase this stat naturally by using your spirit weapon",
-  "gui.hirenkyaku.tooltip": "The speed stat for quincies, more resistance against speed-based abilities, longer teleportation range and better for own speed based attacks",
+  "gui.hirenkyaku.tooltip": "The speed stat for quincies, more resistance against speed-based abilities, better crit chance",
   "gui.class_point.tooltip": "The experience you've gathered as a quincy you can spend on chosen stats, you can acquire more by killing hollows and vanilla mobs",
 
   "gui.kan.tooltip": "The money and currency in the spirit realm used by hollows, quincies and shinigami alike. You can spend them in a shop of your liking spawned around the world",
