fixed the issues with the refactoring of code

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+# Changelog
+
 1.16.x Changelog
 36.2
 ====
@@ -11930,3 +11932,9 @@ v99.99-pre
  - v99.99-pre-3    added main project directories
  - v99.99-pre-2    added main source directory
  - v99.99-pre-1    added base directories
+
+## additions
+
+## changes
+
+## fixed
